@@ -8,7 +8,8 @@ features for next releases:
 		
 		+ Get next available subnet by providing mask;
 		+ Compress DHCP, reserved and offline ranges;
-		+ Support for custom ports;
+		
+		+ Session timeout setup;
 		
 		+ Logs search;
 		+ User actvity display;
