@@ -4,6 +4,7 @@
 	----------------------------	
 	+ Subnet resizing;
 	+ Subnet splitting into smaller subnets (including IP addresses);
+	+ Added free space for nested subnets;
 	
 	Enhancements:
 	----------------------------
